# qua-sdk-py

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/actions/install-poetry/: action.yml
.github/workflows/: main.yml
proto/io/qualang/api/v1/: info_service.proto
qua/: __init__.py  client.py  info.py  version.py
qua/tests/: test_versions_match.py
tests_server/: conftest.py  test_server_info.py
